--- a/LMS-Lexicon/Views/_ViewImports.cshtml
+++ b/LMS-Lexicon/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LMS_Lexicon
 @using LMS_Lexicon.Models
+@using LMS_Lexicon.Models.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
