Fixed LMS_lexicon.Data and LMS_lexicon.Core plus trying to grt the current role

--- a/LMS-Lexicon/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/LMS-Lexicon/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using LMS_Lexicon.Areas.Identity
 @using LMS_Lexicon.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using LMS_Lexicon.Models.Entities
+@using LMS_Lexicon.Core.Models.Entities
