--- a/LMS-Lexicon/Views/_ViewImports.cshtml
+++ b/LMS-Lexicon/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using LMS_Lexicon
-@using LMS_Lexicon.Models
-@using LMS_Lexicon.Models.Entities
+@using LMS_Lexicon.Core.Models.Entities
+@using LMS_Lexicon.Core.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
