--- a/LMS-Lexicon/Views/Home/Index.cshtml
+++ b/LMS-Lexicon/Views/Home/Index.cshtml
@@ -6,3 +6,7 @@
 <div class="text-center">
     <h1 class="display-4">@Model.FirstName : @Model.Role</h1>
 </div>
+
+<div class="p-1">
+    <a asp-controller="Home" asp-action="CreateStudentAsync">Create Student</a>
+</div>
