--- a/LMS-Lexicon/Views/Home/CreateStudent.cshtml
+++ b/LMS-Lexicon/Views/Home/CreateStudent.cshtml
@@ -44,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CourseId" class="control-label"></label>
-                <select asp-for="CourseId" asp-items="Model.VehicleTypes" class="form-control">
+                <select asp-for="CourseId" asp-items="Model.Courses" class="form-control">
                     <option selected="selected" value="">Please select</option>
                 </select>
                 <span asp-validation-for="CourseId" class="text-danger"></span>
