--- a/LMS-Lexicon/Views/Home/Index.cshtml
+++ b/LMS-Lexicon/Views/Home/Index.cshtml
@@ -8,5 +8,5 @@
 </div>
 
 <div class="p-1">
-    <a asp-controller="Home" asp-action="CreateStudentAsync">Create Student</a>
+    <a asp-controller="Home" asp-action="CreateStudent">Create Student</a>
 </div>
