Add Module Controller

--- a/LMS-Lexicon/Views/Modules/Module.cshtml
+++ b/LMS-Lexicon/Views/Modules/Module.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<LMS_Lexicon.Core.Models.Entities.Module>
+﻿@model IEnumerable<Module>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Module";
 }
 
 <h1>Index</h1>
