--- a/LMS-Lexicon/Views/Courses/Edit.cshtml
+++ b/LMS-Lexicon/Views/Courses/Edit.cshtml
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index2">Tillbaka till listan</a>
+    <a asp-action="Index">Tillbaka till listan</a>
     <a asp-action="CreateModule">Skapa Modul</a>
 </div>
 
