--- a/LMS-Lexicon/Views/Courses/Index.cshtml
+++ b/LMS-Lexicon/Views/Courses/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<Course>
 
 @{
-    ViewData["Title"] = "Index2";
+    ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Kurser</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Skapa Kurs</a>
 </p>
 <table class="table">
     <thead>
