--- a/LMS-Lexicon/Views/Teacher/CreateStudent.cshtml
+++ b/LMS-Lexicon/Views/Teacher/CreateStudent.cshtml
@@ -5,15 +5,15 @@
     ViewData["Title"] = "CreateStudent";
 }
 
-<h1>CreateStudent</h1>
+<h1>Skapa Studenter</h1>
 
-<h4>CreateStudentViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="CreateStudent">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <input type="hidden" asp-for="Id" class="form-control" />
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
