--- a/LMS-Lexicon/Views/_ViewImports.cshtml
+++ b/LMS-Lexicon/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using LMS_Lexicon.Core.Models
 @using LMS_Lexicon.Core.Models.Entities
 @using LMS_Lexicon.Core.Models.ViewModels
+@using LMS_Lexicon.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
