--- a/LMS-Lexicon/Views/Courses/Index2.cshtml
+++ b/LMS-Lexicon/Views/Courses/Index2.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Course>
 
 @{
-    ViewData["Title"] = "Index2";
+    ViewData["Title"] = "Courses";
 }
 
-<h1>Index</h1>
+<h1>Courses</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
