--- a/LMS-Lexicon/Views/Modules/Create.cshtml
+++ b/LMS-Lexicon/Views/Modules/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model LMS_Lexicon.Core.Models.Entities.Module
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Skapa";
 }
 
-<h1>Create</h1>
+<h1>Läg till Modules</h1>
 
-<h4>Module</h4>
+<h4>Modules</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
