--- a/LMS-Lexicon/Views/Modules/Index.cshtml
+++ b/LMS-Lexicon/Views/Modules/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<LMS_Lexicon.Core.Models.Entities.Module>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Modules";
 }
 
-<h1>Index</h1>
+<h1>Modules</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Skapa Modules</a>
 </p>
 <table class="table">
     <thead>
