--- a/LMS-Lexicon/Views/Modules/Module.cshtml
+++ b/LMS-Lexicon/Views/Modules/Module.cshtml
@@ -7,7 +7,7 @@
 <h1>Module</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Skapa</a>
 </p>
 <table class="table">
     <thead>
