edit and delete student controller

--- a/LMS-Lexicon/Views/Teacher/DetailsStudent.cshtml
+++ b/LMS-Lexicon/Views/Teacher/DetailsStudent.cshtml
@@ -50,5 +50,6 @@
 </div>
 <div>
     <a asp-action="EditStudent" asp-route-id="@Model.Id">Ändra</a> |
+    <a asp-action="DeleteStudent" asp-route-id="@Model.Id">Ta bort</a> |
     <a asp-action="Index">Tillbaka till listan</a>
 </div>
