Add link to navbar to show modules

--- a/LMS-Lexicon/Views/Courses/Details.cshtml
+++ b/LMS-Lexicon/Views/Courses/Details.cshtml
@@ -23,12 +23,8 @@
 
         @*<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
-               Add list to show here, vad ska vi sa här?
-                @foreach
-            {
-
-            }
-
+              -
+            @Model.Description
             </div>
         </div>*@
     @*</div>
