--- a/LMS-Lexicon/Views/Courses/Details.cshtml
+++ b/LMS-Lexicon/Views/Courses/Details.cshtml
@@ -27,11 +27,11 @@
             @Model.Description
             </div>
         </div>*@
-    @*</div>
-    <div class="card">
-        <div class="card-header" id="headingTwo">
+    @*</div>*@
+    @*<div class="card">
+        <div class="card-header" id="headingOne">
             <h2 class="mb-0">
-                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     @Model.CourseName
                 </button>
             </h2>
@@ -46,13 +46,13 @@
         <div class="card-header" id="headingThree">
             <h2 class="mb-0">
                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    //@Model.CourseName
+                    @Model.Description
                 </button>
             </h2>
         </div>
         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
             <div class="card-body">
-                 .Net Core Moduels
+                 Document
             </div>
         </div>*@
     </div>
