--- a/LMS-Lexicon/Views/Api/LiteratureIndex.cshtml
+++ b/LMS-Lexicon/Views/Api/LiteratureIndex.cshtml
@@ -13,8 +13,8 @@
     <thead>
         <tr>
             <th>
-                @*@Html.DisplayNameFor(model => model.titel)*@
-                Title
+                @*@Html.DisplayNameFor(model => model.Title)*@
+                @Html.ActionLink("Title", "LiteratureIndex", new { sortOrder = ViewBag.NameSortParm })
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Description)
