Changed the sees a little bit.

--- a/LMS-Lexicon/Views/Courses/Index.cshtml
+++ b/LMS-Lexicon/Views/Courses/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Lägg till kurse</a>
+    <a asp-action="Create">Lägg till kurser</a>
     @*<a class="btn btn-success text-white popup" data-url="Teacher/CreateStudent" data-toggle="modal" data-target="#modal-create-user" id="UserModel">Lägg till kurs <i class="fa fa-plus"></i></a>*@
 </p>
 
