--- a/LMS-Lexicon/Views/Modules/Module.cshtml
+++ b/LMS-Lexicon/Views/Modules/Module.cshtml
@@ -6,9 +6,9 @@
 
 <h1>Module</h1>
 
-<p>
+@*<p>
     <a asp-action="Create">Skapa</a>
-</p>
+</p>*@
 <table class="table">
     <thead>
         <tr>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.Course.CourseName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn badge-dark">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-dark">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
             </td>
         </tr>
 }
